Set theme jekyll-theme-slate

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 name: Wayne Giboney
 title: Thoughts and ramblings of @wgiboney
 description: A short description of your site's purpose
